tests/ValidPrograms/Test11/test11.c
int main(){
	int a=3;
    int i;
	while(a<5){
		a=a+1;
	}
	for(i=0; i<3; i=i+1) {}
	return a;
}
