tests/SyntaxError/Test17/test17.c
int main{

	int i=0;
	while (i=8){

		i++;

	}

}
